test/errors/parameterized_types_error/zs/wrong_intfield_parameter_error.zs
package wrong_intfield_parameter_error;

struct Item(int version)
{
    uint16      param;
    uint32      extraParam if version >= 10;
};
